Fix margin issue on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -823,7 +823,7 @@ iframe{
     .services-banner {
         text-align: left;
         margin-bottom: 50px;
-        margin-left: 29px;
+        margin-left: auto;
         margin-right: auto;
         margin-top: 30px;
         color: black;
